--- a/onlinecourse/templates/onlinecourse/course_detail_bootstrap.html
+++ b/onlinecourse/templates/onlinecourse/course_detail_bootstrap.html
@@ -62,13 +62,36 @@
                 </div>
 
             -->
-
+            <button class="btn btn-primary w-100" data-toggle="collapse" data-target="#exam">Start Exam</button>
+            <div id="exam" class="collapse">
             <!-- <HINT> If user is authenticated, show course exam with a list of question -->
-
+                {% if user.is_authenticated %}
+                <form id="questionform" action="{% url 'onlinecourse:submit' course.id %}" method="post">
             <!-- <HINT> Each example will have many questions -->
-
+                    {% for lesson in course.lesson_set.all %}
+                        {% for question in lesson.question_set.all %}
+                            <div class="card mt-1">
+                                <div class="card-header"><h5>{{ question.text}}</h5></div>
+                                {% csrf_token %}
+                                <div class="form-group">
             <!-- <HINT> Each question will have many choices -->
-
+                                {% for choice in question.choice_set.all %}
+                                    <div class="form-check">
+                                        <label class="form-check-label">
+                                            <input type="checkbox" name="choice_{{choice.id}}"
+                                                class="form-check-input" id="{{choice.id}}"
+                                                value="{{choice.id}}">{{ choice.text }}
+                                        </label>
+                                    </div>
+                                {% endfor %}
+                                </div>
+                            </div>
+                        {% endfor %}
+                    {% endfor %}
+                <input class="btn btn-success btn-block" type="submit" value="Submit">
+                </form>
+                {% endif %}
+            </div> 
 
             <!-- <HINT> Create a form to collect the selected choices for all questions -->
             <!-- <HINT> For each question choice, you may create a checkbox input like
