--- a/onlinecourse/templates/onlinecourse/exam_result_bootstrap.html
+++ b/onlinecourse/templates/onlinecourse/exam_result_bootstrap.html
@@ -39,17 +39,45 @@
     {% if grade > 80 %}
     <div class="alert alert-success">
        <!--HINT Display passed info -->
+       <b>Congratulations, {{user.first_name}}!</b> You have passed the exam and completed the course with score {{grade}}/100
     </div>
-        {% else %}
-        <div class="alert alert-danger">
-            <!--HINT Display failed info -->
-        </div>
-        <a class="btn btn-link text-danger" href="{% url 'onlinecourse:course_details' course.id %}">Re-test</a>
-        {% endif %}
-        <div class="card-columns-vertical mt-1">
-        <h5 class="">Exam results</h5>
-            <!--HINT Display exam results-->
-        </div>
+    {% else %}
+    <div class="alert alert-danger">
+        <!--HINT Display failed info -->
+        <b>Failed</b> Sorry, {{user.first_name}}! You have failed the exam with score {{grade}}/100
     </div>
+    <a class="btn btn-link text-danger" href="{% url 'onlinecourse:course_details' course.id %}">Re-test</a>
+    {% endif %}
+    <div class="card-columns-vertical mt-1">
+    <h5 class="">Exam results</h5>
+        <!--HINT Display exam results-->
+        {% for lesson in course.lesson_set.all %}
+            {% for question in lesson.question_set.all %}
+                <div class="card mt-1">
+                    <div class="card-header"><h5>{{ question.text}}</h5></div>
+                    {% csrf_token %}
+                    <div class="form-group">
+                    {% for choice in question.choice_set.all %}
+                        {% if choice.id in choice_ids and choice.is_correct %}
+                            <div class="container-fluid" style="color:green">Correct answer: {{ choice.text }}</div>
+                        {% endif %}
+                        {% if choice.id in choice_ids and not choice.is_correct %}
+                            <div class="container-fluid" style="color:red">Wrong answer: {{ choice.text }}</div>
+                        {% endif %}
+                        {% if choice.id not in choice_ids and choice.is_correct %}
+                            <div class="container-fluid" style="color:orange">Not selected: {{ choice.text }}</div>
+                        {% endif %}
+                        {% if choice.id not in choice_ids and not choice.is_correct %}
+                            <div class="container-fluid" style="color:black">{{ choice.text }}</div>
+                        {% endif %}
+                    {% endfor %}
+                    </div>
+                </div>
+            {% endfor %}
+        {% endfor %}
+
+    </div>
+</div>
+
 </body>
 </html>
