--- a/onlinecourse/templates/onlinecourse/course_detail_bootstrap.html
+++ b/onlinecourse/templates/onlinecourse/course_detail_bootstrap.html
@@ -68,25 +68,23 @@
                 {% if user.is_authenticated %}
                 <form id="questionform" action="{% url 'onlinecourse:submit' course.id %}" method="post">
             <!-- <HINT> Each example will have many questions -->
-                    {% for lesson in course.lesson_set.all %}
-                        {% for question in lesson.question_set.all %}
-                            <div class="card mt-1">
-                                <div class="card-header"><h5>{{ question.text}}</h5></div>
-                                {% csrf_token %}
-                                <div class="form-group">
+                    {% for question in course.question_set.all %}
+                        <div class="card mt-1">
+                            <div class="card-header"><h5>{{ question.text}}</h5></div>
+                            {% csrf_token %}
+                            <div class="form-group">
             <!-- <HINT> Each question will have many choices -->
-                                {% for choice in question.choice_set.all %}
-                                    <div class="form-check">
-                                        <label class="form-check-label">
-                                            <input type="checkbox" name="choice_{{choice.id}}"
-                                                class="form-check-input" id="{{choice.id}}"
-                                                value="{{choice.id}}">{{ choice.text }}
-                                        </label>
-                                    </div>
-                                {% endfor %}
+                            {% for choice in question.choice_set.all %}
+                                <div class="form-check">
+                                    <label class="form-check-label">
+                                        <input type="checkbox" name="choice_{{choice.id}}"
+                                            class="form-check-input" id="{{choice.id}}"
+                                            value="{{choice.id}}">{{ choice.text }}
+                                    </label>
                                 </div>
+                            {% endfor %}
                             </div>
-                        {% endfor %}
+                        </div>
                     {% endfor %}
                 <input class="btn btn-success btn-block" type="submit" value="Submit">
                 </form>
